# aidash

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  main.rs  util.rs
src/cost/: estimator.rs
src/data/: claude.rs  copilot.rs  mod.rs  models.rs
src/tui/: agents.rs  dashboard.rs  help.rs  live.rs  mod.rs  models.rs  session.rs  theme.rs  tools.rs  trends.rs
